--- a/src/DAO/config/config.json
+++ b/src/DAO/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "pomodoro",
+    "password": "asdasdasdsad",
+    "database": "pomodoro_db",
+    "host": "pomodorodb.postgres.database.azure.com",
+    "dialect": "postgres"
   }
 }
